fix(Message): fix timestamp alignment

--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -51,6 +51,7 @@
   margin-bottom: 2px;
   flex: 0 1 auto;
   height: 22px;
+  align-items: baseline;
 }
 
 .sender {
